samples/_failures_safe/1761614397_e1e298_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dda5e4c3.c: In function ‘main’:
./samples/SAFE/__tmp_dda5e4c3.c:160:12: error: missing terminating " character
  160 |     printf("Commands: start, data, process,
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_dda5e4c3.c:160:5: error: expected expression at end of input
  160 |     printf("Commands: start, data, process,
      |     ^~~~~~
./samples/SAFE/__tmp_dda5e4c3.c:160:5: error: expected declaration or statement at end of input
